# AlphaCopyCpp

./: .gitignore  AlphaCopyCpp.pro  AlphaCopyCpp_pt_BR.ts  CMakeLists.txt  README.md
assets/: resources.qrc
src/: copychecksignals.cpp  copychecksignals.h  copycheckthread.cpp  copycheckthread.h  copysignals.cpp  copysignals.h  copythread.cpp  copythread.h  devicesutil.cpp  devicesutil.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2test.ui
